# lucid-v1

./: .gitignore  ReadMe.md  launch.py  pyproject.toml  requirements.txt  server.py  setup.sh
lucid_v1/: dweam.toml  dweam_game.py  launch.py
lucid_v1/maps/: 11613_256_0.pickle  1802_3200_0.pickle  2184_256_0.pickle  635_256_0.pickle  8996_256_0.pickle
lucid_v1/models/: vqvae.py
maps/: 5504_1152_0.pickle  5849_1152_0.pickle  759_384_0.pickle
models/: dit.py
site/: 404.html  index.html  index.txt
site/_next/static/chunks/: 107-07e31001cb796aa8.js  main-app-dda1ec9383a01d0f.js  webpack-a1583354f5c7390c.js
site/_next/static/chunks/app/: layout-ddc20dbb253cd5f2.js  page-7842c1bced6c9764.js
site/_next/static/css/: 1ddd1f310d105ca3.css  e2afc05a739b7247.css
utils/: train_state.py
