[tool.poetry]
name = "lucid-v1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "ReadMe.md"
include = [
    "maps",
    "thumbnails",
    "dweam.toml",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiortc = "*"
aiohttp = "*"
click = "*"
firebase-admin = "*"
tensorflow-cpu = "*"
opencv-python = "*"
moviepy = "*"
einops = "*"
ml-collections = "*"
jax = [
    {version = "0.4.38", platform = "win32"},  # jax does not support gpu on windows
    {extras = ["cuda12"], version = "0.4.38", platform = "linux"}
]
flax = "*"
torchvision = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
